trunk/Archive2/f8/10391a53242a16/output
main.cpp:41:68: error: expected ';' at end of declaration
        SplittingStreambuf<char> buf{std::cout.rdbuf(), std::cout.rdbuf()}
                                                                          ^
                                                                          ;
1 error generated.
